--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<h1>Login</h1>
+<h1><%= title %></h1>
 <form action="/users/create-session" method="post">
     <input type="email" name = "email" placeholder="abc@xyz.com" required>
     <input type="password" name = "password" placeholder="Password" required>
