--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<h1>Register</h1>
+<h1><%= title %></h1>
 <form action="/users/create" method="post">
     <input type="text" name = "name" placeholder="Your Name" required>
     <input type="email" name = "email" placeholder="abc@xyz.com" required>
