--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,5 +7,33 @@
     </head>
     <body>
         <header>
-            Page Header
+            <h1>Page Header</h1>
+
+            <ul>
+
+                <% if(locals.user){ %>
+                    <li>
+                        <a href="/users/profile">
+                            <%= user.name %>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/users/logout">
+                            logout
+                        </a>
+                    </li>
+                <% }else{ %>
+                    <li>
+                        <a href="/users/login">
+                            Login
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/users/register">
+                            Register
+                        </a>
+                    </li>
+                <% } %>
+            </ul>
+
         </header>
