--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,49 @@
-*{
-    
+* {
+  margin: 0;
+}
+
+* #layout-main {
+  height: 100%;
+}
+
+* header {
+  background-color: #9E3D8B;
+  display: flex;
+  justify-content: space-between;
+  margin: auto -16px;
+  padding: 16px 32px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+}
+
+* header h1 {
+  color: #fff;
+  font-family: "McLaren", cursive;
+  font-weight: 200;
+}
+
+* header ul {
+  display: flex;
+  list-style: none;
+}
+
+* header ul li {
+  padding: 0 10px;
+}
+
+* header ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 25px;
+  font-family: "McLaren", cursive;
+  font-weight: 200;
+}
+
+* footer {
+  text-align: center;
+  width: 100%;
+  height: 2.5rem;
+}
+
+* footer p {
+  color: #ccc;
 }
