--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,4 +1,8 @@
 <link rel="stylesheet" href="/css/layout.css">
 <%- include('_header'); %>
+
+<main id="layout-main">
         <%- body %>
+</main>
+        
 <%- include('_footer'); %>
