--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,7 +21,13 @@
                             <%= i.user.name %>
                         </h5>
                         <%= i.content %>
-                    </li>    
+                    </li>
+                   
+                    <form action="/comments/create" id="add-comment-form" method="post">
+                        <input type="text" name="content" placeholder="Add a Comment...">
+                        <input type="hidden" name="post" value= <%= i._id %> >
+                        <button type="submit" >Send</button>
+                    </form>  
                 <%}%>
             </p>
             
