--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 
     <div class="post-form">
         <form action="/posts/create" id="new-post-form" method="post">
-            <textarea name="content" id="new-post-content" cols="30" rows="5" placeholder="What's in your mind!!"></textarea>
+            <textarea name="content" id="new-post-content" cols="30" rows="5" placeholder="What's in your mind!!" required></textarea>
             <button type="submit">Post</button>
         </form>
     </div>
@@ -22,9 +22,23 @@
                         </h5>
                         <%= i.content %>
                     </li>
+
+                    <ul>
+                        <%for(let comment of i.comments){%>
+                            <small>
+                                <b>
+                                    <%= comment.user.name %>
+                                </b>
+                            </small>
+                            <p>
+                                <%= comment.content %>
+                            </p>
+                            
+                        <%}%>
+                    </ul>
                    
                     <form action="/comments/create" id="add-comment-form" method="post">
-                        <input type="text" name="content" placeholder="Add a Comment...">
+                        <input type="text" name="content" placeholder="Add a Comment..." required>
                         <input type="hidden" name="post" value= <%= i._id %> >
                         <button type="submit" >Send</button>
                     </form>  
