--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,31 +17,37 @@
             <p>
                 <%for(let i of post){%>
                     <li>
+                        <%if( locals.user && locals.user.id==i.user.id ){%>
+                            <p>
+                                <a href="/posts/destroy/<%= i._id %>">X</a>
+                            </p>
+                        <%}%>
                         <h5>
                             <%= i.user.name %>
                         </h5>
                         <%= i.content %>
-                    </li>
+                    
 
-                    <ul>
-                        <%for(let comment of i.comments){%>
-                            <small>
-                                <b>
-                                    <%= comment.user.name %>
-                                </b>
-                            </small>
-                            <p>
-                                <%= comment.content %>
-                            </p>
-                            
-                        <%}%>
-                    </ul>
+                        <ul>
+                            <%for(let comment of i.comments){%>
+                                <small>
+                                    <b>
+                                        <%= comment.user.name %>
+                                    </b>
+                                </small>
+                                <p>
+                                    <%= comment.content %>
+                                </p>
+                                
+                            <%}%>
+                        </ul>
                    
-                    <form action="/comments/create" id="add-comment-form" method="post">
-                        <input type="text" name="content" placeholder="Add a Comment..." required>
-                        <input type="hidden" name="post" value= <%= i._id %> >
-                        <button type="submit" >Send</button>
-                    </form>  
+                        <form action="/comments/create" id="add-comment-form" method="post">
+                            <input type="text" name="content" placeholder="Add a Comment..." required>
+                            <input type="hidden" name="post" value= <%= i._id %> >
+                            <button type="submit" >Send</button>
+                        </form> 
+                    </li> 
                 <%}%>
             </p>
             
