Add delete comment feature

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,9 @@
 
                         <ul>
                             <%for(let comment of i.comments){%>
+                                <%if(locals.user && locals.user.id==comment.user.id){%>
+                                    <a href="/comments/destroy/<%= comment._id %>">X</a>
+                                <%}%>
                                 <small>
                                     <b>
                                         <%= comment.user.name %>
