--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -18,7 +18,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/users/profile">
+                        <a href="/users/profile/<%= user._id %>">
                             <%= user.name %>
                         </a>
                     </li>
