--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,49 +1,49 @@
 * {
   margin: 0;
-}
-
-* #layout-main {
-  height: 100%;
+  padding: 0;
 }
 
 * header {
-  background-color: #9E3D8B;
   display: flex;
   justify-content: space-between;
-  margin: auto -16px;
   padding: 16px 32px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 * header h1 {
-  color: #fff;
-  font-family: "McLaren", cursive;
-  font-weight: 200;
+  font-family: sans-serif;
 }
 
 * header ul {
   display: flex;
   list-style: none;
-}
-
-* header ul li {
-  padding: 0 10px;
+  padding: 10px 0;
 }
 
 * header ul li a {
+  font-family: sans-serif;
+  font-size: 17px;
+  padding-right: 20px;
+}
+
+* #layout-main #home-container {
+  display: flex;
+}
+
+* #layout-main #home-container #user-feed {
+  width: 80%;
+}
+
+* #layout-main #home-container #user-friends {
+  width: 20%;
+  height: 100%;
+}
+
+* #layout-main #home-container #user-friends #friends-container ul {
+  list-style: none;
+}
+
+* #layout-main #home-container #user-friends #friends-container ul li a {
+  font-family: sans-serif;
+  font-size: 16px;
   text-decoration: none;
-  color: #fff;
-  font-size: 25px;
-  font-family: "McLaren", cursive;
-  font-weight: 200;
-}
-
-* footer {
-  text-align: center;
-  width: 100%;
-  height: 2.5rem;
-}
-
-* footer p {
-  color: #ccc;
 }
