--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,46 +1,59 @@
 *{
     margin: 0;
-    #layout-main{
-        height: 100%;
-    }
-    header {
-        background-color: #9E3D8B;
+    padding: 0;
+    header{
         display: flex;
         justify-content: space-between;
-        margin: auto -16px;
         padding: 16px 32px;
-        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
         h1{
-            color: #fff;
-            font-family: "McLaren", cursive;
-            font-weight: 200;
+            font-family: sans-serif;
         }
         ul{
             display: flex;
             list-style: none;
-            li{
-                padding: 0 10px;
-                a{
-                    text-decoration: none;
-                    color: #fff;
-                    font-size: 25px;
-                    font-family: "McLaren", cursive;
-                    font-weight: 200;
+            padding: 10px 0;
+            li a{
+                font-family: sans-serif;
+                font-size: 17px;
+                padding-right: 20px;
+            }
+            
+
+        }
+    }
+    #layout-main{
+        #home-container{
+            display: flex;
+            #user-feed{
+                width: 80%;
+            }
+            #user-friends{
+                width: 20%;
+                height: 100%;
+                h1{
+
+                }
+                #friends-container{
+                    ul{
+                        list-style: none;
+                        li{
+                            a{
+                                font-family: sans-serif;
+                                font-size: 16px;
+                                text-decoration: none;
+                            }
+                        }
+                    }
                 }
             }
         }
     }
-    footer {
-        text-align: center;
-        width: 100%;
-        height: 2.5rem;
-        p {
-            color:  #ccc;
-        }
-    }    
+    footer{
+
+    }
+
 }
 
 
-  
 
 
