--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/login.css">
+<link rel="stylesheet" href="/css/form.css">
 <div id="form-page">
     <div class="form-box">
         <div class="caption-title">
