--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,7 +1,20 @@
 <footer>
-    <p>
-        Copyrights &copy; 2022
-    </p>
+    <div class="container">
+        <p>
+            Git repository link of 
+            <a href="https://github.com/suriyaaap13/ReachMe">ReachMe</a>
+            feel free to contribute.
+        </p>
+        <p>
+            Desktop version, mobile version not avaliable
+        </p>
+        <p>
+            A Solid Social Networking platform
+        </p>
+        <p>
+            ReachMe &copy; 2022 
+        </p>
+    </div>
 </footer>
 
 <%- script %>
