--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,10 +1,17 @@
 *{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    *::-webkit-scrollbar{
+        display: none;
+    }
     header{
         display: flex;
         justify-content: space-between;
         padding: 16px 32px;
+        border-bottom: 1px solid black;
+        box-shadow: 0px 1px 7px;
         h1{
             font-family: sans-serif;
         }
@@ -17,8 +24,6 @@
                 font-size: 17px;
                 padding-right: 20px;
             }
-            
-
         }
     }
     #layout-main{
@@ -49,7 +54,16 @@
         }
     }
     footer{
-
+        width: 100%;
+        border-top: 1px solid black;
+        text-align: center;
+        .container{
+            padding: 32px;
+            p{
+                font-family: 'Roboto', sans-serif;
+                font-size: 18px;
+            }
+        }
     }
 
 }
