--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,72 @@
 *{
+    #layout-main{
+        height: 100%;
+        #home-container{
+            display: flex;
+            padding: 16px 32px;
+            #user-feed{
+                width: 80%;
+                #post-form{
+                    width: 300px;
+                    box-shadow: 0px 0px 5px black;
+                    position: relative;
+                    form{
+                        box-shadow: 0px 1px black;
+                        textarea{
+                            outline: none;
+                            padding: 7px;
+                            width: 100%;
+                            font-family: 'Roboto', sans-serif;
+                            font-size: 16px;
+                            height: 120px;
+                            border-radius: 3px;
+                            
+                        }
+                        button{
+                            position: absolute;
+                            height: 25px;
+                            width: 40px;
+                            padding: 3px;
+                            right: 3px;
+                            font-family: sans-serif;
+                            bottom: 3px;
+                        }
+                    }
+                }
+                #post-list-items{
     
+                }
+            }
+            #user-friends{
+                width: 20%;
+                border-left: 1px solid lightgray;
+                padding: 16px 0px;
+                text-align: center;
+                h1{
+                    padding: 0px 0px 16px 0px;
+                    border-bottom: 1px solid black;
+                    width: 100%;
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 32px;
+                    font-weight: 500;
+                }
+                #friends-container{
+                    ul{
+                        
+                        li{
+                            padding: 16px 0px;
+                            border-bottom: 1px solid lightgray;
+                            a{
+                                
+                                text-decoration: underline;
+                                font-family: 'Roboto', sans-serif;
+                                font-size: 20px;
+                            }
+                        }
+                    }
+                }
+                
+            }
+        }
+    }
 }
