--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -11,7 +11,7 @@
         justify-content: space-between;
         padding: 16px 32px;
         border-bottom: 1px solid black;
-        box-shadow: 0px 1px 7px;
+        box-shadow: 0px 0.25px 7px;
         h1{
             font-family: sans-serif;
         }
@@ -20,36 +20,9 @@
             list-style: none;
             padding: 10px 0;
             li a{
-                font-family: sans-serif;
+                font-family: 'Roboto', sans-serif;
                 font-size: 17px;
                 padding-right: 20px;
-            }
-        }
-    }
-    #layout-main{
-        #home-container{
-            display: flex;
-            #user-feed{
-                width: 80%;
-            }
-            #user-friends{
-                width: 20%;
-                height: 100%;
-                h1{
-
-                }
-                #friends-container{
-                    ul{
-                        list-style: none;
-                        li{
-                            a{
-                                font-family: sans-serif;
-                                font-size: 16px;
-                                text-decoration: none;
-                            }
-                        }
-                    }
-                }
             }
         }
     }
