style post and comments

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,16 +1,19 @@
 <li>
-    <p>
-        <%if(locals.user && locals.user.id==comment.user.id){%>
-            <a href="/comments/destroy/<%= comment._id %>">X</a>
-        <%}%>
-        <small>
-            <b>
+    <div class="comment-card">
+        <div class="comment-title">
+            <p>
                 <%= comment.user.name %>
-            </b>
-        </small>
-        <p>
-            <%= comment.content %>
-        </p>
-    </p>
-    
+            </p>
+            <%if(locals.user && locals.user.id==comment.user.id){%>
+                <a href="/comments/destroy/<%= comment._id %>">
+                    <p>X</p>
+                </a>
+            <%}%>
+        </div>
+        <div class="comment-content">
+            <p>
+                <%= comment.content %>
+            </p>
+        </div>
+    </div> 
 </li>
