--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -41,6 +41,18 @@
   bottom: 3px;
 }
 
+* #layout-main #home-container #user-feed #post-list-items {
+  padding: 16px 0px 0px 0px;
+}
+
+* #layout-main #home-container #user-feed #post-list-items ul {
+  list-style-type: none;
+}
+
+* #layout-main #home-container #user-feed #post-list-items ul li {
+  padding: 10px 0px;
+}
+
 * #layout-main #home-container #user-friends {
   width: 20%;
   border-left: 1px solid lightgray;
@@ -66,4 +78,60 @@
   text-decoration: underline;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
+}
+
+.post-card {
+  width: 400px;
+}
+
+.post-card-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.post-card-title p {
+  font-size: 1.1rem;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+}
+
+.post-content {
+  font-size: 1.3rem;
+  padding: 5px 0px;
+  font-family: 'Roboto', sans-serif;
+}
+
+#add-comment-form input {
+  height: 1.4rem;
+  padding: 5px;
+  font-size: 1rem;
+}
+
+#add-comment-form button {
+  height: 1.4rem;
+  font-size: 1rem;
+  width: 4rem;
+}
+
+.comment-card {
+  width: 300px;
+  padding: 0px 5px;
+}
+
+.comment-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.comment-title p {
+  font-size: 0.9rem;
+  font-family: 'Roboto', sans-serif;
+  padding: 2px 10px;
+  font-weight: 500;
+}
+
+.comment-content p {
+  font-size: 0.9rem;
+  font-family: 'Roboto', sans-serif;
+  padding: 2px 10px;
 }
