--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -34,8 +34,16 @@
                     }
                 }
                 #post-list-items{
-    
+                    padding: 16px 0px 0px 0px;
+                    ul{
+                        list-style-type: none;
+                        li{
+                            padding: 10px 0px;
+                            
+                        }
+                    }
                 }
+                
             }
             #user-friends{
                 width: 20%;
@@ -68,5 +76,60 @@
                 
             }
         }
+    }
+}
+
+
+.post-card{
+    width: 400px;
+}
+.post-card-title{
+    display: flex;
+    justify-content: space-between;
+    p{
+        font-size: 1.1rem;
+        font-weight: 500;
+        font-family: 'Roboto', sans-serif;
+    }
+}
+.post-content{
+    font-size: 1.3rem;
+    padding: 5px 0px;
+    font-family: 'Roboto', sans-serif;
+}
+
+#add-comment-form{
+    input{
+        height: 1.4rem;
+        padding: 5px;
+        font-size: 1rem;
+    }
+    button{
+        height: 1.4rem;
+        font-size: 1rem;
+        width: 4rem;
+    }
+}
+
+.comment-card{
+    width: 300px;
+    padding: 0px 5px;
+}
+
+.comment-title{
+    display: flex;
+    justify-content: space-between;
+    p{
+        font-size: 0.9rem;
+        font-family: 'Roboto', sans-serif;
+        padding: 2px 10px;
+        font-weight: 500;
+    }
+}
+.comment-content{
+    p{
+        font-size: 0.9rem;
+        font-family: 'Roboto', sans-serif;
+        padding: 2px 10px;
     }
 }
