--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,25 +1,34 @@
 <li>
-    <% if( locals.user && locals.user.id==i.user.id ){ %>
-        <p>
-            <a href="/posts/destroy/<%= i._id %>">X</a>
-        </p>
-    <% } %>
-    <h5>
-        <%= i.user.name %>
-    </h5>
-    <%= i.content %>
-
-
-    <ul>
-        <%for( comment of i.comments){%>
-            <%-include('_comment')-%>
-        <%}%>
-    </ul>
-
-    <form action="/comments/create" id="add-comment-form" method="post">
-        <input type="text" name="content" placeholder="Add a Comment..." required>
-        <input type="hidden" name="post" value= <%= i._id %> >
-        <button type="submit" >Send</button>
-    </form> 
+    <div class="post-card">
+        <div class="post-card-title">
+            <p>
+                <%= i.user.name %>
+            </p>
+            <% if( locals.user && locals.user.id==i.user.id ){ %>
+                <p>
+                    <a href="/posts/destroy/<%= i._id %>">
+                        X
+                    </a>
+                </p>
+            <% } %>
+            
+        </div>
+        <div class="post-content">
+            <%= i.content %>
+        </div>
+        <ul>
+            <%for( comment of i.comments){%>
+                <%-include('_comment')-%>
+            <%}%>
+        </ul>
+    
+        <form action="/comments/create" id="add-comment-form" method="post">
+            <input type="text" name="content" placeholder="Add a Comment..." required>
+            <input type="hidden" name="post" value= <%= i._id %> >
+            <button type="submit" >Add</button>
+        </form> 
+        
+    </div>
+    
 
 </li>
