--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
                     <button type="submit">Post</button>
                 </form>
             </div>
-            <div class="post-list-items">
+            <div id="post-list-items">
                 <ul>
                     
                     <% for(i of post){ %>
