Convert actions into async await

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
             </p>
         </div>
         <div id="form-container">
-            <form action="/users/create-session" method="post">
+            <form action="/users/create" method="post">
                 <div class="input-data">
                     <p>User Name</p>
                     <input type="text" name = "name" placeholder="Your Name" required>
@@ -28,7 +28,6 @@
                 <div class="move-btn">
                     <button type="submit" value="register">Register</button>
                 </div>
-                
             </form>
         </div>
     </div>
