--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,8 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 * *::-webkit-scrollbar {
@@ -28,6 +26,7 @@
 }
 
 * header ul li a {
+  color: blue;
   font-family: 'Roboto', sans-serif;
   font-size: 17px;
   padding-right: 20px;
