--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,8 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
     *::-webkit-scrollbar{
         display: none;
     }
@@ -20,6 +18,7 @@
             list-style: none;
             padding: 10px 0;
             li a{
+                color: blue;
                 font-family: 'Roboto', sans-serif;
                 font-size: 17px;
                 padding-right: 20px;
