--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -11,6 +11,11 @@
     <body>
         <header>
             <h1>ReachMe</h1>
+            <%if(flash.success && flash.success.length > 0){%>
+                <h3>
+                        <%= flash.success %>
+                </h3>
+            <%}%>
 
             <ul>
 
