--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,34 +1,39 @@
 * #form-page {
   height: 100%;
   width: 100%;
-  padding: 100px 420px;
+  padding: 6.25rem 26.25rem;
 }
 
 * #form-page .form-box {
   width: 40%;
   height: 40%;
   border: 1px solid black;
+  box-shadow: 0px 2px 7px black;
   border-radius: 7px;
 }
 
 * #form-page .form-box .caption-title {
-  padding: 8px;
+  padding: 0.5rem;
   border-bottom: 1px solid black;
-  height: 27px;
+  background-color: lightgray;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  font-weight: 500;
+  height: 1.7rem;
 }
 
 * #form-page .form-box .caption-title p {
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 1.25rem;
   color: black;
 }
 
 * #form-page .form-box #form-container {
-  padding: 20px;
+  padding: 1.25rem;
 }
 
 * #form-page .form-box #form-container form {
-  padding: 30px 70px;
+  padding: 5% 14%;
 }
 
 * #form-page .form-box #form-container form .input-data {
@@ -37,27 +42,27 @@
 
 * #form-page .form-box #form-container form .input-data p {
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
-  width: 160px;
+  font-size: 1.25rem;
+  width: 10rem;
 }
 
 * #form-page .form-box #form-container form .input-data input {
   display: block;
-  height: 32px;
-  padding: 3px;
-  width: 250px;
-  font-size: 16px;
-  margin-bottom: 23px;
+  height: 2.5%;
+  padding: 0.2rem;
+  width: 15.625rem;
+  font-size: 1rem;
+  margin-bottom: 1.4375rem;
   outline: none;
 }
 
 * #form-page .form-box #form-container form .move-btn {
-  padding: 7px 130px;
+  padding: 0.4375rem 8.125rem;
 }
 
 * #form-page .form-box #form-container form .move-btn button {
-  padding: 3px;
-  font-size: 16px;
-  height: 30px;
-  width: 90px;
+  padding: 0.1875rem;
+  font-size: 1rem;
+  height: 1.875rem;
+  width: 5.625rem;
 }
