--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -4,7 +4,7 @@
 
 * #layout-main #home-container {
   display: flex;
-  padding: 16px 32px;
+  padding: 1rem 2rem;
 }
 
 * #layout-main #home-container #user-feed {
@@ -12,7 +12,7 @@
 }
 
 * #layout-main #home-container #user-feed #post-form {
-  width: 300px;
+  width: 18.75rem;
   box-shadow: 2px 2px 7px black;
   position: relative;
 }
@@ -26,46 +26,46 @@
   padding: 7px;
   width: 100%;
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  height: 120px;
-  border-radius: 3px;
+  font-size: 1rem;
+  height: 7.5rem;
+  border-radius: 0.2rem;
 }
 
 * #layout-main #home-container #user-feed #post-form form button {
   position: absolute;
-  height: 25px;
-  width: 40px;
-  padding: 3px;
-  right: 3px;
+  height: 1.56rem;
+  width: 2.5rem;
+  padding: 0.2rem;
+  right: 0.2rem;
   font-family: sans-serif;
-  bottom: 3px;
+  bottom: 0.2rem;
 }
 
-* #layout-main #home-container #user-feed #post-list-items {
-  padding: 16px 0px 0px 0px;
+* #layout-main #home-container #user-feed #post-list-container {
+  padding: 1rem 0px 0px 0px;
 }
 
-* #layout-main #home-container #user-feed #post-list-items ul {
+* #layout-main #home-container #user-feed #post-list-container ul {
   list-style-type: none;
 }
 
-* #layout-main #home-container #user-feed #post-list-items ul li {
-  padding: 10px 0px;
+* #layout-main #home-container #user-feed #post-list-container ul li {
+  padding: 0.625rem 0px;
 }
 
 * #layout-main #home-container #user-friends {
   width: 20%;
   border-left: 1px solid lightgray;
-  padding: 16px 0px;
+  padding: 1rem 0px;
   text-align: center;
 }
 
 * #layout-main #home-container #user-friends h1 {
-  padding: 0px 0px 16px 0px;
+  padding: 0px 0px 1rem 0px;
   border-bottom: 1px solid black;
   width: 100%;
   font-family: 'Roboto', sans-serif;
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 500;
 }
 
@@ -74,7 +74,7 @@
 }
 
 * #layout-main #home-container #user-friends #friends-container ul li {
-  padding: 16px 0px;
+  padding: 1rem 0px;
   border-bottom: 1px solid lightgray;
 }
 
@@ -82,11 +82,11 @@
   color: blue;
   text-decoration: underline;
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .post-card {
-  width: 400px;
+  width: 25rem;
 }
 
 .post-card-title {
@@ -102,13 +102,13 @@
 
 .post-content {
   font-size: 1.3rem;
-  padding: 5px 0px;
+  padding: 0.32rem 0px;
   font-family: 'Roboto', sans-serif;
 }
 
 #add-comment-form input {
   height: 1.4rem;
-  padding: 5px;
+  padding: 0.32rem;
   font-size: 1rem;
 }
 
@@ -119,8 +119,8 @@
 }
 
 .comment-card {
-  width: 300px;
-  padding: 0px 5px;
+  width: 19rem;
+  padding: 0px 0.32rem;
 }
 
 .comment-title {
@@ -131,12 +131,12 @@
 .comment-title p {
   font-size: 0.9rem;
   font-family: 'Roboto', sans-serif;
-  padding: 2px 10px;
+  padding: 0.125rem 0.625rem;
   font-weight: 500;
 }
 
 .comment-content p {
   font-size: 0.9rem;
   font-family: 'Roboto', sans-serif;
-  padding: 2px 10px;
+  padding: 0.125rem 0.625rem;
 }
