--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  overflow: scroll;
 }
 
 * *::-webkit-scrollbar {
@@ -10,7 +11,7 @@
 * header {
   display: flex;
   justify-content: space-between;
-  padding: 16px 32px;
+  padding: 1rem 2rem;
   border-bottom: 1px solid black;
   box-shadow: 0px 0.25px 7px;
 }
@@ -22,14 +23,14 @@
 * header ul {
   display: flex;
   list-style: none;
-  padding: 10px 0;
+  padding: 0.625rem 0;
 }
 
 * header ul li a {
   color: blue;
   font-family: 'Roboto', sans-serif;
-  font-size: 17px;
-  padding-right: 20px;
+  font-size: 1.06rem;
+  padding-right: 1.25rem;
 }
 
 * footer {
@@ -39,10 +40,10 @@
 }
 
 * footer .container {
-  padding: 32px;
+  padding: 2rem;
 }
 
 * footer .container p {
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
+  font-size: 1.125rem;
 }
