--- a/assets/scss/form.scss
+++ b/assets/scss/form.scss
@@ -2,50 +2,56 @@
     #form-page{
         height: 100%;
         width: 100%;
-        padding: 100px 420px;
-        .form-box{
+        padding: 6.25rem 26.25rem;
+        .form-box{ 
             width: 40%;
             height: 40%;
             border: 1px solid black;
+            box-shadow: 0px 2px 7px black;
             border-radius: 7px;
             .caption-title{
-                padding: 8px;
+                padding: 0.5rem;
                 border-bottom: 1px solid black;
-                height: 27px;
+                background-color: lightgray;
+                border-top-left-radius: 7px;
+                border-top-right-radius: 7px;
+                font-weight: 500;
+                height: 1.7rem;
                 p{
                     font-family: 'Roboto', sans-serif;
-                    font-size: 20px;
+                    font-size: 1.25rem;
                     color: black;
                 }
             }
             #form-container{
-                padding: 20px;
+                padding: 1.25rem;
                 form{
-                    padding: 30px 70px;
+                    // padding: 1.875rem 4.375rem;
+                    padding: 5% 14%;
                     .input-data{
                         display: flex;
                         p{
                             font-family: 'Roboto', sans-serif;
-                            font-size: 20px;
-                            width: 160px;
+                            font-size: 1.25rem;
+                            width: 10rem;
                         }
                         input{
                             display: block;
-                            height: 32px;
-                            padding: 3px;
-                            width: 250px;
-                            font-size: 16px;
-                            margin-bottom: 23px;
+                            height: 2.5%;
+                            padding: 0.2rem;
+                            width: 15.625rem;
+                            font-size: 1rem;
+                            margin-bottom: 1.4375rem;
                             outline: none;
                         }
                     }
                     .move-btn{
-                        padding: 7px 130px;
+                        padding: 0.4375rem 8.125rem;
                         button{
-                            padding: 3px;
-                            font-size: 16px;
-                            height: 30px;
-                            width: 90px;
+                            padding: 0.1875rem;
+                            font-size: 1rem;
+                            height: 1.875rem;
+                            width: 5.625rem;
                         }
                     }
                 }
