--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,11 +3,11 @@
         min-height: 100%;
         #home-container{
             display: flex;
-            padding: 16px 32px;
+            padding: 1rem 2rem;
             #user-feed{
                 width: 80%;
                 #post-form{
-                    width: 300px;
+                    width: 18.75rem;
                     box-shadow: 2px 2px 7px black;
                     position: relative;
                     form{
@@ -17,28 +17,28 @@
                             padding: 7px;
                             width: 100%;
                             font-family: 'Roboto', sans-serif;
-                            font-size: 16px;
-                            height: 120px;
-                            border-radius: 3px;
+                            font-size: 1rem;
+                            height: 7.5rem;
+                            border-radius: 0.2rem;
                             
                         }
                         button{
                             position: absolute;
-                            height: 25px;
-                            width: 40px;
-                            padding: 3px;
-                            right: 3px;
+                            height: 1.56rem;
+                            width: 2.5rem;
+                            padding: 0.2rem;
+                            right: 0.2rem;
                             font-family: sans-serif;
-                            bottom: 3px;
+                            bottom: 0.2rem;
                         }
                     }
                 }
-                #post-list-items{
-                    padding: 16px 0px 0px 0px;
+                #post-list-container{
+                    padding: 1rem 0px 0px 0px;
                     ul{
                         list-style-type: none;
                         li{
-                            padding: 10px 0px;
+                            padding: 0.625rem 0px;
                             
                         }
                     }
@@ -48,27 +48,27 @@
             #user-friends{
                 width: 20%;
                 border-left: 1px solid lightgray;
-                padding: 16px 0px;
+                padding: 1rem 0px;
                 text-align: center;
                 h1{
-                    padding: 0px 0px 16px 0px;
+                    padding: 0px 0px 1rem 0px;
                     border-bottom: 1px solid black;
                     width: 100%;
                     font-family: 'Roboto', sans-serif;
-                    font-size: 32px;
+                    font-size: 2rem;
                     font-weight: 500;
                 }
                 #friends-container{
                     ul{
                         list-style: none;
                         li{
-                            padding: 16px 0px;
+                            padding: 1rem 0px;
                             border-bottom: 1px solid lightgray;
                             a{
                                 color: blue;
                                 text-decoration: underline;
                                 font-family: 'Roboto', sans-serif;
-                                font-size: 20px;
+                                font-size: 1.25rem;
                             }
                         }
                     }
@@ -81,7 +81,7 @@
 
 
 .post-card{
-    width: 400px;
+    width: 25rem;
 }
 .post-card-title{
     display: flex;
@@ -94,14 +94,14 @@
 }
 .post-content{
     font-size: 1.3rem;
-    padding: 5px 0px;
+    padding: 0.32rem 0px;
     font-family: 'Roboto', sans-serif;
 }
 
 #add-comment-form{
     input{
         height: 1.4rem;
-        padding: 5px;
+        padding: 0.32rem;
         font-size: 1rem;
     }
     button{
@@ -112,8 +112,8 @@
 }
 
 .comment-card{
-    width: 300px;
-    padding: 0px 5px;
+    width: 19rem;
+    padding: 0px 0.32rem;
 }
 
 .comment-title{
@@ -122,7 +122,7 @@
     p{
         font-size: 0.9rem;
         font-family: 'Roboto', sans-serif;
-        padding: 2px 10px;
+        padding: 0.125rem 0.625rem;
         font-weight: 500;
     }
 }
@@ -130,6 +130,6 @@
     p{
         font-size: 0.9rem;
         font-family: 'Roboto', sans-serif;
-        padding: 2px 10px;
+        padding: 0.125rem 0.625rem;
     }
 }
