--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,13 +1,17 @@
 *{
     margin: 0;
     padding: 0;
+    overflow: scroll;
+    // -webkit-box-sizing: border-box;
+    // -moz-box-sizing: border-box;
+    // box-sizing: border-box;
     *::-webkit-scrollbar{
         display: none;
     }
     header{
         display: flex;
         justify-content: space-between;
-        padding: 16px 32px;
+        padding: 1rem 2rem;
         border-bottom: 1px solid black;
         box-shadow: 0px 0.25px 7px;
         h1{
@@ -16,12 +20,12 @@
         ul{
             display: flex;
             list-style: none;
-            padding: 10px 0;
+            padding: 0.625rem 0;
             li a{
                 color: blue;
                 font-family: 'Roboto', sans-serif;
-                font-size: 17px;
-                padding-right: 20px;
+                font-size: 1.06rem;
+                padding-right: 1.25rem;
             }
         }
     }
@@ -30,10 +34,10 @@
         border-top: 1px solid black;
         text-align: center;
         .container{
-            padding: 32px;
+            padding: 2rem;
             p{
                 font-family: 'Roboto', sans-serif;
-                font-size: 18px;
+                font-size: 1.125rem;
             }
         }
     }
