--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,4 +1,4 @@
-<li>
+<li id="post-<%= post._id %>">
     <div class="post-card">
         <div class="post-card-title">
             <p>
@@ -6,7 +6,7 @@
             </p>
             <% if( locals.user && locals.user.id==i.user.id ){ %>
                 <p>
-                    <a href="/posts/destroy/<%= i._id %>">
+                    <a class="delete-post-btn" href="/posts/destroy/<%= i._id %>">
                         X
                     </a>
                 </p>
@@ -16,11 +16,11 @@
         <div class="post-content">
             <%= i.content %>
         </div>
-        <ul>
+        <ul id="post-comment-<%= post._id %>">
             <%for( comment of i.comments){%>
                 <%-include('_comment')-%>
             <%}%>
-        </ul>
+        </ul> 
     
         <form action="/comments/create" id="add-comment-form" method="post">
             <input type="text" name="content" placeholder="Add a Comment..." required>
