--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -22,7 +22,7 @@
             <%}%>
         </ul> 
         <!-- Comment form -->
-        <form action="/comments/create" id="add-comment-form" method="post">
+        <form action="/comments/create" id="add-comment-form-<%= post._id %>" method="post">
             <input type="text" name="content" placeholder="Add a Comment..." required>
             <input type="hidden" name="post" value= <%= i._id %> >
             <button type="submit" >Add</button>
