--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -47,6 +47,7 @@
             }
             #user-friends{
                 width: 20%;
+                min-height: 100%;
                 border-left: 1px solid lightgray;
                 padding: 1rem 0px;
                 text-align: center;
