--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,12 +2,15 @@
 <h1>
     ReachMe/<%= title %>  
 </h1>
+<img src="<%= user.avatar %>" alt="<%= user.name %>" width="200" height="250">
 <div>
     <% if(user.id==profile_user.id){ %>
         <!-- show form to update -->
-        <form action=" /users/update/<%= profile_user._id %> " method="post">
+        <form action=" /users/update/<%= profile_user._id %> " method="post" enctype="multipart/form-data">
             <input type="text" name="name" placeholder="Your name" value= "<%= profile_user.name %>" >
             <input type="email" name="email" id="" placeholder="Your email" value = "<%= profile_user.email %>" >
+            
+            <input type="file" name="avatar" placeholder="Profile Picture" >
             <button type="submit">Update</button>
         </form>
     <% } %>
