create Authorization using jwt and create an action for deleting a post using api

--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,4 +1,4 @@
-<li id="post-<%= post._id %>">
+<li id="post-<%= i._id %>">
     <div class="post-card">
         <div class="post-card-title">
             <p>
